# py-melonds

./: .gitignore  CMakeLists.txt  README.md  config.example.py  diag.py  display.py  install.py  memory_gen4.py  probe_gen4.py  pyproject.toml  requirements.txt
.github/workflows/: build-release.yml
python/melonds/: __init__.py  core.py  emulator.py
scripts/: build_win64.bat
src/: melonds_interface.cpp  melonds_interface.h  platform_headless.cpp
tests/: test_c.cpp  test_python.py
